@@ -1,32 +1,32 @@
 package ca.uhn.fhir.jpa.starter;
 
-import java.util.ArrayList;
-import java.util.HashMap;
-import java.util.List;
-import java.util.Map;
-import java.util.Objects;
 
-
+import ca.uhn.fhir.context.FhirVersionEnum;
+import ca.uhn.fhir.jpa.api.config.JpaStorageSettings.ClientIdStrategyEnum;
+import ca.uhn.fhir.jpa.model.entity.NormalizedQuantitySearchLevel;
+import ca.uhn.fhir.jpa.packages.PackageInstallationSpec;
+import ca.uhn.fhir.rest.api.EncodingEnum;
 import org.cqframework.cql.cql2elm.CqlCompilerException;
 import org.cqframework.cql.cql2elm.CqlTranslator;
-import org.cqframework.cql.cql2elm.CqlTranslatorOptions;
 import org.cqframework.cql.cql2elm.LibraryBuilder;
 import org.hl7.fhir.r4.model.Bundle;
 import org.springframework.boot.context.properties.ConfigurationProperties;
 import org.springframework.boot.context.properties.EnableConfigurationProperties;
 import org.springframework.context.annotation.Configuration;
 
-import com.google.common.collect.ImmutableList;
-
-import ca.uhn.fhir.context.FhirVersionEnum;
-import ca.uhn.fhir.jpa.api.config.JpaStorageSettings.ClientIdStrategyEnum;
-import ca.uhn.fhir.jpa.model.entity.NormalizedQuantitySearchLevel;
-import ca.uhn.fhir.rest.api.EncodingEnum;
+import java.util.ArrayList;
+import java.util.HashSet;
+import java.util.List;
+import java.util.Map;
+import java.util.Objects;
+import java.util.Set;
 
 @ConfigurationProperties(prefix = "hapi.fhir")
 @Configuration
 @EnableConfigurationProperties
 public class AppProperties {
+
+	private Boolean cr_enabled = false;
 	//cql settings
 	private Boolean cql_use_embedded_libraries = true;
 	private Boolean cql_runtime_debug_logging_enabled = false;
@@ -56,7 +56,6 @@ public class AppProperties {
 	// Care-gaps Settings
 	private String caregaps_reporter = "default";
 	private String caregaps_section_author = "default";
-	private Boolean cr_enabled = false;
 	private Boolean ips_enabled = false;
 	private Boolean openapi_enabled = false;
 	private Boolean mdm_enabled = false;
@@ -68,6 +67,7 @@ public class AppProperties {
 	private Boolean allow_multiple_delete = false;
 	private Boolean allow_override_default_search_params = true;
 	private Boolean auto_create_placeholder_reference_targets = false;
+	private final Set<String> auto_version_reference_at_paths = new HashSet<>();
 	private Boolean dao_scheduling_enabled = true;
 	private Boolean delete_expunge_enabled = false;
 	private Boolean enable_index_missing_fields = false;
@@ -98,16 +98,20 @@ public class AppProperties {
 	private List<String> supported_resource_types = new ArrayList<>();
 	private List<Bundle.BundleType> allowed_bundle_types = null;
 	private Boolean narrative_enabled = true;
+
 	private Validation validation = new Validation();
-	private Map<String, Tester> tester = new HashMap<>();
+	private Map<String, Tester> tester = null;
 	private Logger logger = new Logger();
 	private Subscription subscription = new Subscription();
 	private Cors cors = null;
 	private Partitioning partitioning = null;
 	private Boolean install_transitive_ig_dependencies = true;
 	private Boolean reload_existing_implementationguides = false;
-	private Map<String, ImplementationGuide> implementationGuides = null;
+	private Map<String, PackageInstallationSpec> implementationGuides = null;
+
 	private String staticLocation = null;
+
+	private String staticLocationPrefix = "/static";
 
 	private Boolean lastn_enabled = false;
 	private boolean store_resource_in_lucene_index_enabled = false;
@@ -118,13 +122,23 @@ public class AppProperties {
 
 	private Integer bundle_batch_pool_size = 20;
 	private Integer bundle_batch_pool_max_size = 100;
-	private final List<String> local_base_urls = new ArrayList<>();
+	private final Set<String> local_base_urls = new HashSet<>();
 
 	private final List<String> custom_interceptor_classes = new ArrayList<>();
+
+	public String getStaticLocationPrefix() {
+		return staticLocationPrefix;
+	}
+
+	public void setStaticLocationPrefix(String staticLocationPrefix) {
+		this.staticLocationPrefix = staticLocationPrefix;
+	}
+
 
 	public List<String> getCustomInterceptorClasses() {
 		return custom_interceptor_classes;
 	}
+
 
 	public String getStaticLocation() {
 		return staticLocation;
@@ -133,6 +147,7 @@ public class AppProperties {
 	public void setStaticLocation(String staticLocation) {
 		this.staticLocation = staticLocation;
 	}
+
 
 	public Boolean getOpenapi_enabled() {
 		return openapi_enabled;
@@ -166,11 +181,11 @@ public class AppProperties {
 		this.defer_indexing_for_codesystems_of_size = defer_indexing_for_codesystems_of_size;
 	}
 
-	public Map<String, ImplementationGuide> getImplementationGuides() {
+	public Map<String, PackageInstallationSpec> getImplementationGuides() {
 		return implementationGuides;
 	}
 
-	public void setImplementationGuides(Map<String, ImplementationGuide> implementationGuides) {
+	public void setImplementationGuides(Map<String, PackageInstallationSpec> implementationGuides) {
 		this.implementationGuides = implementationGuides;
 	}
 
@@ -180,6 +195,14 @@ public class AppProperties {
 
 	public void setPartitioning(Partitioning partitioning) {
 		this.partitioning = partitioning;
+	}
+
+	public Boolean getCr_enabled() {
+		return cr_enabled;
+	}
+
+	public void setCr_enabled(Boolean cr_enabled) {
+		this.cr_enabled = cr_enabled;
 	}
 
 	public boolean isCqlUseEmbeddedLibraries() {
@@ -382,14 +405,6 @@ public class AppProperties {
 		this.cql_compiler_translator_format = cqlTranslatorFormat;
 	}
 
-
-	public Boolean getCr_enabled() {
-		return cr_enabled;
-	}
-
-	public void setCr_enabled(Boolean cr_enabled) {
-		this.cr_enabled = cr_enabled;
-	}
 	public String getCareGapsReporter() {
 		return caregaps_reporter;
 	}
@@ -401,6 +416,7 @@ public class AppProperties {
 	public void setCareGapsReporter(String theCareGapsReporter) {
 		this.caregaps_reporter = theCareGapsReporter;
 	}
+
 	public Boolean getIps_enabled() {
 		return ips_enabled;
 	}
@@ -408,6 +424,7 @@ public class AppProperties {
 	public void setIps_enabled(Boolean ips_enabled) {
 		this.ips_enabled = ips_enabled;
 	}
+
 
 	public Boolean getMdm_enabled() {
 		return mdm_enabled;
@@ -486,7 +503,7 @@ public class AppProperties {
 	}
 
 	public void setClient_id_strategy(
-			ClientIdStrategyEnum client_id_strategy) {
+		ClientIdStrategyEnum client_id_strategy) {
 		this.client_id_strategy = client_id_strategy;
 	}
 
@@ -535,7 +552,7 @@ public class AppProperties {
 	}
 
 	public void setAllow_override_default_search_params(
-			Boolean allow_override_default_search_params) {
+		Boolean allow_override_default_search_params) {
 		this.allow_override_default_search_params = allow_override_default_search_params;
 	}
 
@@ -544,8 +561,12 @@ public class AppProperties {
 	}
 
 	public void setAuto_create_placeholder_reference_targets(
-			Boolean auto_create_placeholder_reference_targets) {
+		Boolean auto_create_placeholder_reference_targets) {
 		this.auto_create_placeholder_reference_targets = auto_create_placeholder_reference_targets;
+	}
+
+	public Set<String> getAuto_version_reference_at_paths() {
+		return auto_version_reference_at_paths;
 	}
 
 	public Integer getDefault_page_size() {
@@ -601,7 +622,7 @@ public class AppProperties {
 	}
 
 	public void setEnforce_referential_integrity_on_delete(
-			Boolean enforce_referential_integrity_on_delete) {
+		Boolean enforce_referential_integrity_on_delete) {
 		this.enforce_referential_integrity_on_delete = enforce_referential_integrity_on_delete;
 	}
 
@@ -610,7 +631,7 @@ public class AppProperties {
 	}
 
 	public void setEnforce_referential_integrity_on_write(
-			Boolean enforce_referential_integrity_on_write) {
+		Boolean enforce_referential_integrity_on_write) {
 		this.enforce_referential_integrity_on_write = enforce_referential_integrity_on_write;
 	}
 
@@ -746,11 +767,13 @@ public class AppProperties {
 		this.tester = tester;
 	}
 
-	public Boolean getNarrative_enabled() {
+	public Boolean getNarrative_enabled()
+	{
 		return narrative_enabled;
 	}
 
-	public void setNarrative_enabled(Boolean narrative_enabled) {
+	public void setNarrative_enabled(Boolean narrative_enabled)
+	{
 		this.narrative_enabled = narrative_enabled;
 	}
 
@@ -810,13 +833,13 @@ public class AppProperties {
 		this.bundle_batch_pool_max_size = bundle_batch_pool_max_size;
 	}
 
-	public List<String> getLocal_base_urls() {
+	public Set<String> getLocal_base_urls() {
 		return local_base_urls;
 	}
 
 	public static class Cors {
 		private Boolean allow_Credentials = true;
-		private List<String> allowed_origin = ImmutableList.of("*");
+		private List<String> allowed_origin = List.of("*");
 
 		public List<String> getAllowed_origin() {
 			return allowed_origin;
@@ -833,6 +856,7 @@ public class AppProperties {
 		public void setAllow_Credentials(Boolean allow_Credentials) {
 			this.allow_Credentials = allow_Credentials;
 		}
+
 
 	}
 
@@ -876,6 +900,7 @@ public class AppProperties {
 		}
 	}
 
+
 	public static class Tester {
 
 		private String name;
@@ -916,35 +941,6 @@ public class AppProperties {
 		}
 	}
 
-	public static class ImplementationGuide {
-		private String url;
-		private String name;
-		private String version;
-
-		public String getUrl() {
-			return url;
-		}
-
-		public void setUrl(String url) {
-			this.url = url;
-		}
-
-		public String getName() {
-			return name;
-		}
-
-		public void setName(String name) {
-			this.name = name;
-		}
-
-		public String getVersion() {
-			return version;
-		}
-
-		public void setVersion(String version) {
-			this.version = version;
-		}
-	}
 
 	public static class Validation {
 
@@ -980,7 +976,6 @@ public class AppProperties {
 		public void setPartitioning_include_in_search_hashes(Boolean partitioning_include_in_search_hashes) {
 			this.partitioning_include_in_search_hashes = partitioning_include_in_search_hashes;
 		}
-
 		public Boolean getAllow_references_across_partitions() {
 			return allow_references_across_partitions;
 		}
@@ -1019,6 +1014,7 @@ public class AppProperties {
 		public void setEmail(Email email) {
 			this.email = email;
 		}
+
 
 		public static class Email {
 			public String getFrom() {
